--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "robinowitz",
+  "productName": "robinowitz",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "My Electron application description",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": {
+    "name": "IchBinHanz",
+    "email": "nilssimons707@gmail.com"
+  },
+  "license": "MIT",
   "dependencies": {
+    "auto-launch": "^5.0.6",
     "dialog-node": "^0.2.1",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
-    "node-shutdown-windows": "^1.0.0",
-    "node-windows": "^1.0.0-beta.8",
     "socket.io": "^4.7.1"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.2.1",
+    "@electron-forge/maker-deb": "^6.2.1",
+    "@electron-forge/maker-rpm": "^6.2.1",
+    "@electron-forge/maker-squirrel": "^6.2.1",
+    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
+    "electron": "25.3.2"
   }
 }
